# zip-cellular-automata

./: .gitignore  LICENSE  README.md  findings.md  pyproject.toml
docs/: design.md
paper/: s11047-024-09975-4.md  s11047-024-09975-4_content_list.json  s11047-024-09975-4_content_list_v2.json  s11047-024-09975-4_middle.json  s11047-024-09975-4_model.json
puzzles/: tiny_3x3.json  tiny_3x3.solution.json
scripts/: bench.py  phase8a_consensus_sweep.py  phase8b_margin_diagnostic.py  phase8b_symmetry_breaker_sweep.py  render_diffusion.py  render_solution.py  solve.py  sweep_phase7.py  trace_phase7_argmax.py  verify_baseline_scoring.py  verify_phase8_option_h.py
src/zip_ca/: __init__.py  actions.py  diffusion.py  direction.py  engine.py  geometry.py  noise.py  path_shapes.py  puzzle.py  puzzle_io.py  quiescence.py  scoring.py  shapes.py  solver.py  trace.py
src/zip_ca/viz/: __init__.py  panel_a.py  panel_b.py
tests/: test_reproducibility.py  test_reward_softmax.py
